2017-05-23  Per Bothner  <per@bothner.com>

	* ClassExp.java (comp[ileMembers): Call allocateLocal for static link.
	This applies to a construtor call.

2017-05-16  Per Bothner  <per@bothner.com>

	* Compilation.java (generateCheckMethod): Fix generation of method name.

2017-05-12  Per Bothner  <per@bothner.com>

	* Declaration.java (ignorable): Remove strange test.
	I'm not sure the motivation for checking isHandlingTailCalls;
	it doesn't seem to be needed, and breaks new pattern code.

2017-05-03  Per Bothner  <per@bothner.com>

	* LambdaExp.java (addMethodFor): Add a getLangTypeFor call.
	This was for unspecified but inherited parameter or result type.

2017-04-30  Per Bothner  <per@bothner.com>

	* Compilation.java (generateBytecode):Sometimes create "$run$" method..
	If the super class defines a non-abstract "run" and an abstract "$run$"
	generate the latter rather then the former for the body method. This is
	useful for a superclass "wrapping" the run method, as used for JavaFX.

2017-04-29  Per Bothner  <per@bothner.com>

	Better compilation even if supplied-optional booleans are used.
	Don't disable generatation of direct-callable overladed methods.

2017-04-20  Per Bothner  <per@bothner.com>

	* Mangling.java: Use "symbolic" mangling for fields and variables.
	(mangleVariable, mangleField, demangleField, mangleMethod)
	demangleMethod): New convenience methods.
	(* InlineCalls.java (isCompatibleWithValue): New helper method.
	Takes into account LazyType.
	* Language.java (mangleNameIfNeeded): Removed method.

	* InlineCalls.java (maybeInline): Extended constant-folding.
	If validate-apply property is 'inline-if-constant, optimize.
	(visitIfExp): Don't visit never-used branches.
	This avoids some bogus error messages - as well as some useful ones.
	(visitTryExp): Optimize if body is constant.

2017-04-15  Per Bothner  <per@bothner.com>

	* LambdaExp.java (declareClosureEnv): Fix for inlining.